--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "^3.1.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.1.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
