--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "eslint": "^7.25.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "^17.0.2"
   },
   "jest": {
     "preset": "react-native"
